# X-File

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  desktop-release.yml  x-file-windows-build.yml
apps/desktop/: README.md  package.json  tsconfig.json
apps/desktop/src/: dev-shell.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  updater.rs
apps/server/: package.json
apps/server/src/: app.ts  http-server-manager.ts  main.ts
apps/server/src/lifecycle/: persistent-backend-manager.ts
apps/server/src/office/: onlyoffice-controller.ts  onlyoffice-service.test.ts  (+1 more)
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  i18n.ts  main.tsx  styles.css
docs/: 20260608-CodingNS接入X-File说明.md  20260608-X-File第一版验收说明.md  20260609-X-File大目录压测说明.md  20260609-X-File本地UI截图对照说明.md  20260609-前端开发规范.md  20260609-文档库视图迁移批次完整清单.md  20260610-文档库视图迁移测试进度.md  20260613-CodingNS文档库代码清单.md
scripts/: benchmark-large-library.mjs  build-macos.sh  build-windows.sh  check-desktop-release-secrets.mjs  dev-all.sh  dev-server.sh  dev-web.sh  prepare-bundled-server.mjs  prepare-ui-screenshot-session.mjs  release-macos.sh  sync-version.mjs
specs/: README.md
specs/000-Spec规范/Spec模板/: README.md  design.md  requirements.md  tasks.md
specs/spec001-X-File文档库独立应用/: README.md  design.md  requirements.md  tasks.md
specs/spec001-X-File文档库独立应用/docs/: 20260608-当前CodingNS文档库迁移清单.md
(+42 files in other folders)
