[package]
name = "x-file-desktop"
version = "0.1.0"
description = "X-File 文档库独立应用桌面壳"
edition = "2021"

[lib]
name = "x_file_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "x-file-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
