[package]
name = "x-file-desktop"
version = "0.1.0-dev.9"
description = "X-File 文档库独立应用桌面壳"
edition = "2021"

[lib]
name = "x_file_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "x-file-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSAppearance", "NSGraphics", "NSView", "NSVisualEffectView", "NSWindow"] }
objc2-foundation = "0.3.2"
